# mockups-mpc

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml  requirements.txt  server.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml
app/: config.py  db.py  main.py  mcp_server.py  models.py  seed.py  storage.py
app/routes/: api.py  gallery.py
app/static/: setup-guide.html  style.css
app/templates/: gallery.html
docs/handoffs/: 2026-06-05-post-review-followups.md  2026-06-05-session2-deploy-and-release.md  2026-07-02-promotion-and-release-hygiene.md
docs/plans/: 2026-05-20-favorites-ui-uplift.md
docs/specs/: 2026-05-20-favorites-ui-uplift-design.md
docs/superpowers/plans/: 2026-03-15-mockups-mpc.md
docs/superpowers/specs/: 2026-03-15-mockups-mpc-design.md
tests/: conftest.py  test_api.py  test_db.py  test_gallery.py  test_mcp_tools.py  test_storage.py
