[project]
name = "mockups-mpc"
version = "1.2.2"
description = "A mockup management server with MCP (Model Context Protocol) integration"
license = "MIT"
requires-python = ">= 3.12"

[project.urls]
Homepage = "https://github.com/kgNatx/mockups-mpc"
Repository = "https://github.com/kgNatx/mockups-mpc"
